<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUsersActivity"
    android:background="@color/dark"
    >


    <TextView
        android:id="@+id/text_name"
        android:layout_width="77dp"
        android:layout_height="17dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/editText_password"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/price"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_balance"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/nfc"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editText_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toEndOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/atpakal" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editText_Balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <EditText
        android:id="@+id/editText_Balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_balance"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/transp_border"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editText_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Balance" />

    <Button
        android:id="@+id/button_viewAll"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/shapelogin"
        android:text="@string/view_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/transp_border"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_id" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/transp_border"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_edit"
        app:layout_constraintTop_toBottomOf="@+id/editText_id" />

    <TextView
        android:id="@+id/textView_id"
        android:layout_width="26dp"
        android:layout_height="21dp"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="114dp"
        android:text="@string/id"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_balance" />

    <EditText
        android:id="@+id/editText_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_id" />

    <Button
        android:id="@+id/atpakal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="294dp"
        android:layout_marginLeft="294dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shapesignup"
        android:onClick="goBack"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>