<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background32"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/text_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:text="@string/your_balance"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:textColor="@color/white"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_balance"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_NFC"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/transp_button"
        android:drawableLeft="@drawable/ic_nfc_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_showGoodies"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_showGoodies"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/transp_button"
        android:drawableLeft="@drawable/ic_free_breakfast_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_showTop"
        app:layout_constraintStart_toEndOf="@+id/button_NFC" />

    <Button
        android:id="@+id/button_showTop"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/transp_button"
        android:drawableLeft="@drawable/ic_supervisor_account_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_showInfo"
        app:layout_constraintStart_toEndOf="@+id/button_showGoodies" />

    <Button
        android:id="@+id/button_showInfo"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/transp_button"
        android:drawableLeft="@drawable/ic_info_outline_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_logout"
        app:layout_constraintStart_toEndOf="@+id/button_showTop" />

    <TextView
        android:id="@+id/editText_goodies"
        android:layout_width="328dp"
        android:layout_height="336dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/editText_top"
        android:layout_width="329dp"
        android:layout_height="336dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/editText_info"
        android:layout_width="330dp"
        android:layout_height="336dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:scrollbars="vertical"
        android:text="@string/info_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/transp_button"
        android:capitalize="characters"
        android:onClick="goBack"
        android:text="@string/backX"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_showInfo" />

    <TextView
        android:id="@+id/editText_question"
        android:layout_width="329dp"
        android:layout_height="70dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_balance" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/transp_border"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_showGoodies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>